# quickpoeterGUI

./: .gitignore  README.md  package.json
.github/workflows/: debug-publish.yml  publish.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/config/: coefficients.yaml  fields.yaml
src-tauri/icons/: icon.icns
src-tauri/res/: r_index2word.pkl  r_special_info.pkl
src-tauri/src/: main.rs
