[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "*", features = ["api-all"] }
# for local development
# quickpoeter = { path = "../../quickpoeter/" }
quickpoeter = { git = "https://github.com/sitandr/quickpoeter_core" }
lazy_static = "1.4.0"
ordered-float = "*"
serde_yaml = "*"
# clap = "*"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
edit_distances = ["quickpoeter/edit_distances"]
custom-protocol = [ "tauri/custom-protocol" ]
